<resources>
    <string name="app_name">No:01_Notification(抬頭顯示器)</string>
    <string name="xml_Basic">一般基本的</string>
    <string name="xml_Time">有時間的</string>
    <string name="xml_sound">有聲音的</string>
    <string name="xml_shock">有震動的</string>
    <string name="xml_Priority">有優先權的</string>
    <string name="xml_Images">有顯示圖檔的</string>
    <string name="xml_Text">有大量文字的</string>
    <string name="xml_CallAPP">可呼叫 APP 的（內建的計算機）</string>
    <string name="xml_Button">有按鈕的（呼叫內建的計算機）</string>
    <string name="MainActivity_basic_title">Notification 的標題</string>
    <string name="MainActivity_basic_text">Notification 的內容文字</string>
    <string name="MainActivity_basic_sub">Notification 的提示文字</string>
    <string name="MainActivity_basic_ticker">Notification 的狀態列文字</string>
    <string name="MainActivity_time_title">有時間的 Notification</string>
    <string name="MainActivity_time_text">有時間的 Notification</string>
    <string name="MainActivity_time_sub">有時間的 Notification</string>
    <string name="MainActivity_time_ticker">有時間的 Notification</string>
    <string name="MainActivity_sound_title">有聲音的 Notification</string>
    <string name="MainActivity_sound_text">有聲音的 Notification</string>
    <string name="MainActivity_sound_sub">有聲音的 Notification</string>
    <string name="MainActivity_sound_ticker">有聲音的 Notification</string>
    <string name="MainActivity_shock_title">有震動的 Notification</string>
    <string name="MainActivity_shock_text">有震動的 Notification</string>
    <string name="MainActivity_shock_sub">有震動的 Notification</string>
    <string name="MainActivity_shock_ticker">有震動的 Notification</string>
    <string name="MainActivity_priority_title">高優先權的 Notification</string>
    <string name="MainActivity_priority_text">高優先權的 Notification</string>
    <string name="MainActivity_priority_sub">高優先權的 Notification</string>
    <string name="MainActivity_priority_ticker">高優先權的 Notification</string>
    <string name="MainActivity_images_title">有圖檔的Notification</string>
    <string name="MainActivity_images_text">有圖檔的Notification</string>
    <string name="MainActivity_images_sub">有圖檔的Notification</string>
    <string name="MainActivity_images_ticker">有圖檔的Notification</string>
    <string name="MainActivity_imagesText">圖檔說明文字：VOLVO 60 系列</string>
    <string name="MainActivity_text_title">有大量文字的Notification</string>
    <string name="MainActivity_text_text">有大量文字的Notification</string>
    <string name="MainActivity_text_sub">有大量文字的Notification</string>
    <string name="MainActivity_text_ticker">有大量文字的Notification</string>
    <string name="MainActivity_callAPP_title">可呼叫APP的Notification</string>
    <string name="MainActivity_callAPP_text">可呼叫APP的Notification</string>
    <string name="MainActivity_callAPP_sub">可呼叫APP的Notification</string>
    <string name="MainActivity_callAPP_ticker">可呼叫APP的Notification</string>
    <string name="MainActivity_button_title">有按鈕的Notification</string>
    <string name="MainActivity_button_text">有按鈕的Notification</string>
    <string name="MainActivity_button_sub">有按鈕的Notification</string>
    <string name="MainActivity_button_ticker">有按鈕的Notification</string>
    <string name="MainActivity_call_calculator">呼叫計算機</string>
    <string name="MainActivity_call_calculator_error">搜尋失敗！無法呼叫：「計算機 APP」！</string>
</resources>